deploy/design-system/ingress.tpl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${KUBE_NAMESPACE}-ingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: ${KUBE_NAMESPACE}-ingress-${KUBE_NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - ${KUBE_NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: ${KUBE_NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: justice-gov-uk-design-system-service # this should match the metadata.name in service.yml
                port:
                  number: 6006
